--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "qs": "^6.9.4",
     "vue": "^2.5.2",
